# swap-mouse-buttons

./: .gitignore  .hgeol  .hgignore  CMakeLists.txt  LICENSE  README.md  swap_mouse_buttons_unix.cpp
src/: swap_mouse_buttons_unix.cpp  swap_mouse_buttons_win.cpp
